xidlc/tests/snapshots/codegen_snapshot__python__hello_world.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
hello_world.py
===============
# Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.

from __future__ import annotations

import abc
import enum
from dataclasses import dataclass, field
from typing import Any, Optional

# generated module: hello_world

class HelloWorld(abc.ABC):
    @abc.abstractmethod
    def say_hello(self, name: str) -> None:
        raise NotImplementedError
