xidlc/tests/snapshots/codegen_snapshot__python__struct_skip.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_skip.py
===============
# Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.

from __future__ import annotations

import abc
import enum
from dataclasses import dataclass, field
from typing import Any, Optional

# generated module: struct_skip

@dataclass
class SkipStruct:
    a: int = 0
    c: int = 0
